# BOTanist

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile.dev  README.md  conanfile.txt  version.cc.in
.github/workflows/: ci-build-win.yaml  ci-build.yaml
docker/: .gitlab-ci.yml  Dockerfile
src/: botanist.cpp  botanist.h  journal.cpp  journal.h  log.h  main.cpp  simple_command.h  simple_commands.cpp  simple_commands.h  storage.cpp  storage.h  telegram_helpers.cpp  telegram_helpers.h  version.h  web.cpp  web.h
